[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/flag.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/black_box.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26, 24.5 )

[node name="flag" type="Node2D"]
script = ExtResource( 1 )
blocage_y = 25

[node name="activation_area" type="Area2D" parent="."]

[node name="collision_shape" type="CollisionShape2D" parent="activation_area"]
shape = SubResource( 1 )

[node name="blocage_position" type="Position2D" parent="."]

[node name="next_scene_position" type="Position2D" parent="."]

[node name="up2" type="Sprite" parent="."]
position = Vector2( 22.7497, -311 )
scale = Vector2( 0.874609, 0.702083 )
z_index = 3
texture = ExtResource( 2 )

[node name="up" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
points = PoolVector2Array( -128, -64, 128, -64 )

[node name="down" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
points = PoolVector2Array( -128, 64, 128, 64 )

[node name="down2" type="Sprite" parent="."]
position = Vector2( 26.3752, 303 )
scale = Vector2( 0.874414, 0.667361 )
z_index = 3
texture = ExtResource( 2 )

[node name="worm_place" type="Node2D" parent="."]

[node name="die" type="Timer" parent="."]
wait_time = 0.136

[node name="spawn_delay" type="Timer" parent="."]
wait_time = 0.5

[node name="direction_line" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.188235, 0.203922, 0.27451, 0.392157 )

[node name="out_of_bounds" type="Node2D" parent="."]

[node name="out_of_bounds_area" type="Area2D" parent="out_of_bounds"]
position = Vector2( 0, -219 )

[node name="up" type="CollisionShape2D" parent="out_of_bounds/out_of_bounds_area"]
shape = SubResource( 2 )

[node name="down" type="CollisionShape2D" parent="out_of_bounds/out_of_bounds_area"]
position = Vector2( -4, 449 )
shape = SubResource( 2 )

[node name="right" type="CollisionShape2D" parent="out_of_bounds/out_of_bounds_area"]
position = Vector2( 320, 218 )
shape = SubResource( 2 )

[connection signal="body_entered" from="activation_area" to="." method="_on_activation_area_body_entered"]
[connection signal="timeout" from="die" to="." method="_on_die_timeout"]
[connection signal="body_entered" from="out_of_bounds/out_of_bounds_area" to="." method="_on_out_of_bounds_area_body_entered"]
